# Kaggle-Competition-Math-Classifier

./: .gitignore  README.md  create_dataloaders.py  main.py  notes.md  preprocess_dataset.ipynb  pyproject.toml  qwen25_classifier.py  submission.csv  train.py
dataset/preprocessed/: train.csv  val.csv
notebooks/: preprocess_dataset.ipynb  qwen2_5_classifier.ipynb  test_utils_funcs.ipynb
submissions/: submission_mathbert.csv
utils/: constants.py  create_dataloaders.py  create_model.py  llama32_classifier.py  qwen25_classifier.py  save_adapter_only.py  summarize_model.py  train.py
utils/llama32/: create_llama32.py
utils/qwen25/: create_qwen25.py
utils/qwen3/: create_qwen3.py  qwen3_classifier_class.py
