[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kaggle-math-classifier"
version = "0.1.0"
description = "A Python project for classifying mathematical expressions."
license = { text = "MIT" }
keywords = ["math", "classifier", "python"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]